docs: Clean up memory profiling documentation
- Removed all hypothetical/theoretical test data sections
- Removed 'Next steps' and unnecessary footers
- Added NFR-3 requirements alignment section showing compliance
- Updated TASK-027 with actual test results (3 scenarios: 100K, 1M, 4M records)
- Noted deferred items: 1-hour stress test and 10M specific test to production monitoring
- All NFR-3 acceptance criteria met:
  * Heap < 512 MB ✅ (peak 312 MB)
  * No memory leaks ✅ (stable 8-9 MB after GC)
  * GC pressure < 10% ✅ (achieved < 0.2%)
  * Streaming architecture ✅ (verified)

Document now contains only real test results and verified findings.